# server/src/main/resources/openapi/reservoir.yaml
@@ -209,6 +209,8 @@ paths:
           $ref: "#/components/responses/trait_400"
         "404":
           $ref: "#/components/responses/trait_404"
+        "409":
+          $ref: "#/components/responses/trait_409"
         "500":
           $ref: "#/components/responses/trait_500"
   /reservoir/config/pools/{id}/initializations/{jobId}:
@@ -228,6 +230,7 @@ paths:
         description: Pool job identifier
         schema:
           type: string
+          format: uuid
     get:
       description: Get pool initialization job status
       operationId: initializationsPoolGet
@@ -962,6 +965,13 @@ components:
           schema:
             type: object
             example: {"error":"Identifier 596d9f60-cda3-44d2-a4a1-2f48b7d4d23c not found"}
+    trait_409:
+      description: Conflict
+      content:
+        text/plain:
+          schema:
+            type: string
+            example: A pool initialization job is already running for this tenant
     trait_500:
       description: Internal error
       content:
